Fix overflow issue causing extra scrollbars to appear

--- a/src/components/play.css
+++ b/src/components/play.css
@@ -45,7 +45,7 @@
   width: calc(100% - 2rem);
   display: inline-block;
   text-overflow: ellipsis;
-  overflow-x: hidden;
+  overflow: hidden;
   white-space: nowrap;
   vertical-align: bottom;
 }
